# task1

./: CMakeLists.txt
header/: 12.hh  Cat.hh  Chicken.hh  Dog.hh  Egg.hh  Pet.hh  Worker.hh  Zoo.hh  act.hh  start.hh  stop.hh  strings.hh  task1.hh
src/: Worker.cc  act.cc  one.cc  task1.cc  two.cc
